--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <body>
     <div class="container">
         <h1>Color Guessing Game</h1>
+        <p class="description">Try to guess the correct color! Click on the color that matches the displayed box.</p>
         <div id="colorBox" data-testid="colorBox"></div>
         <p id="gameInstructions" data-testid="gameInstructions">Guess the correct color!</p>
         <div id="colorOptions"></div>
         <p id="gameStatus" data-testid="gameStatus"></p>
         <p id="score" data-testid="score">Score: 0</p>
+        <p id="failures" data-testid="failures">Failures: 0</p>
         <button id="newGameButton" data-testid="newGameButton">New Game</button>
     </div>
-    
     <script src="./index.js"></script>
 </body>
 </html>
