--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <p class="description">Try to guess the correct color! Click on the color that matches the displayed box.</p>
         <div id="colorBox" data-testid="colorBox"></div>
         <p id="gameInstructions" data-testid="gameInstructions">Guess the correct color!</p>
-        <div id="colorOptions" data-testid="colorOptions"></div>
+        <div id="colorOptions"></div>
         <p id="gameStatus" data-testid="gameStatus"></p>
         <p id="score" data-testid="score">Score: 0</p>
-        <p id="failures" data-testid="failures">Failures: 0</p>
+        <p id="failures">Failures: 0</p>
         <button id="newGameButton" data-testid="newGameButton">New Game</button>
     </div>
     <script src="./index.js"></script>
